Big Gameplay Push

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
     <head>
         <meta charset="utf-8" />
         <title>Anime Opening Kurta</title>
+        <script src="./lib/anime.min.js"></script>
         <script src="./src/utils.js"></script>
+        <script src="./src/animation.js"></script>
         <script src="./src/audio.js"></script>
         <script src="./src/main.js"></script>
-        <script src="./src/button.js"></script>
         <script src="./src/game.js"></script>
+        <script src="./src/button.js"></script>
         <link href="./styles/default-styles.css" type="text/css" rel="stylesheet" />
     </head>
     <body>
@@ -53,7 +55,7 @@
                     </div>
                 </div>
                 <div id="animeCharacterContainer">
-                    <img id="animeCharacter" src="images/characters/KarutameGirl1.png" alt="Anime Character">
+                    <img id="animeCharacter" class="animeCharacter" src="images/characters/KarutameGirl1.png" alt="Anime Character">
                 </div>
             </div>
         </main>
